--- a/assignment1.html
+++ b/assignment1.html
@@ -1,11 +1,3 @@
-<!-- 
-  Assignment #1 - REMEMBER TO FOLLOW THE STYLE GUIDE
-
-  1. Fork your own version of this repo
-  2. Create a branch named <your-name>-assignment1 (in my case it would be mattbowytz-assignment1)
-  3. Basing your code off of the below example, tell me a little bit about yourself
--->
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,16 +5,11 @@
     <title>Assignment 1</title>
   </head>
   <body>
-    <!--
-      In this section (<body>), create a h1 tag stating your name
-      Beneath that, create an unordered list with at least 3 list items
-      that describe your web development experience (if any, it's ok if this is all new :D)
-
-      This is just a quick exercise to show that you know how to work with git and GitHub
-      No styling or scripting is required for this assignment
-
-      If you don't know how to make the above mentioned tags, either take a look around on
-      the internet, or don't hesitate to ask me!
-    -->
+    <h1> Taylor Herb </h1>
+      <ul>
+        <li>The only relevant experience I have is using HTML to edit my Myspace profile</li>
+        <li>But that was in like 2007</li>
+        <li>&#9786; &#9786;</li>
+      </ul>
   </body>
 </html>
